fix: migrate paginate -> pagination.pagerSize (Hugo >=0.128)

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "/"
 languageCode = "de-de"
 title = "Planbar – Vorlagen, Rechner & Checklisten"
 theme = "PaperMod"
-paginate = 10
+pagerSize = 10
 
 [params]
   env = "production"
